# md-models-training-and-evaluation

./: README.md  handler.py  pyproject.toml
evaluation/: annotation.py  eval_algorithm.py  intersection.py  llm_reponse.py
inference/: constatns.py  instructs.py  main.py
notebooks/: dataset_merging_and_spliting.ipynb  fined_tuned_llms_scoring.ipynb  upload_datasets_to_hugging_face.ipynb
notebooks/openai/: fine_tuning.ipynb
notebooks/openai_code/: fine_tuning.ipynb
notebooks/phi3/: Phi3_3_5_mini_UA_spectrum.ipynb  Phi3_5_mini_instruct_UA_golden.ipynb  Phi_3_5_Instruct_Unsloth_Fine_Tuning_Artificial.ipynb  Phi_3_5_Instruct_Unsloth_Fine_Tuning_Mixed.ipynb  Phi_3_Mini_4K_Instruct_alpaca_ua.ipynb  Phi_3_finetune_qlora_python.ipynb
tests/: eval_algoritm_tests.py
