[tool.poetry]
name = "llm-evaluation"
version = "0.1.0"
description = ""
authors = ["Ostap Bodnar <ostapbod674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.43.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
polars = "^1.6.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
ua-gec = "^2.1.3"
bs4 = "^0.0.2"
huggingface-hub = "^0.24.6"
peft = "0.12.0"
transformers = "4.44.1"
datasets = "3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
